--- a/quiz/m2_advanced_quants/l5_volatility/rolling_windows_solution.ipynb
+++ b/quiz/m2_advanced_quants/l5_volatility/rolling_windows_solution.ipynb
@@ -32,17 +32,19 @@
    "source": [
     "def calculate_simple_moving_average(rolling_window, close):\n",
     "    \"\"\"\n",
-    "    Compute returns for each ticker and date in close.\n",
+    "    Compute the simple moving average.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
+    "    rolling_window: int\n",
+    "        Rolling window length\n",
     "    close : DataFrame\n",
     "        Close prices for each ticker and date\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
-    "    returns : DataFrame\n",
-    "        Returns for each ticker and date\n",
+    "    simple_moving_average : DataFrame\n",
+    "        Simple moving average for each ticker and date\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
