--- a/quiz/m3_funds_etfs_portfolio_optimization/l1_stocks_indices_funds/cumsum_and_cumprod.ipynb
+++ b/quiz/m3_funds_etfs_portfolio_optimization/l1_stocks_indices_funds/cumsum_and_cumprod.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "The cumulative return of stock ABC over period n is the compounded return over period n:\n",
     "\n",
-    "$ (1 + r_1)(1 + r_2)(1 + r_3)(1 + r_4)(1 + r_5)...(1 + r_n) $\n",
+    "$ (1 + r_1)(1 + r_2)(1 + r_3)(1 + r_4)(1 + r_5)...(1 + r_n) - 1 $\n",
     "\n",
     "First, let's calculate the returns of stock ABC.  "
    ]
@@ -55,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "returns = (abc_close.shift(-1)/abc_close).dropna()\n",
-    "returns.head(10)"
+    "returns = abc_close / abc_close.shift(1) - 1\n",
+    "returns"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "returns.cumprod()[len(returns)-1]-1"
+    "(returns + 1).cumprod()[len(returns)-1] - 1"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cum_log_return = log_returns.cumsum()[len(returns)-1]\n",
+    "cum_log_return = log_returns.cumsum()[len(log_returns)-1]\n",
     "np.exp(cum_log_return) - 1"
    ]
   },
