--- a/quiz/m3_funds_etfs_portfolio_optimization/l1_stocks_indices_funds/cumsum_and_cumprod_solution.ipynb
+++ b/quiz/m3_funds_etfs_portfolio_optimization/l1_stocks_indices_funds/cumsum_and_cumprod_solution.ipynb
@@ -47,7 +47,7 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    \n",
-    "    returns = (close.shift(-1)/close - 1).dropna()\n",
+    "    returns = close / close.shift(1) - 1\n",
     "    arithmetic_returns = returns.cumsum(axis =0).iloc[returns.shape[0]-1]/returns.shape[0]\n",
     "    \n",
     "    return arithmetic_returns\n",
