Remove package install from notebooks

--- a/project/project_4/project_4_starter.ipynb
+++ b/project/project_4/project_4_starter.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "The other packages that we're importing are `project_helper` and `project_tests`. These are custom packages built to help you solve the problems.  The `project_helper` module contains utility functions and graph functions. The `project_tests` contains the unit tests for all the problems.\n",
     "\n",
-    "### Install Packages"
+    "### Change to top level of the repo"
    ]
   },
   {
@@ -22,8 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install -r requirements.txt"
+    "import os,sys\n",
+    "repo_dir = os.path.dirname(os.path.dirname(os.path.dirname(os.getcwd())))\n",
+    "if sys.path[0]!=repo_dir:\n",
+    "    sys.path.insert(0,repo_dir)\n",
+    "#sys.path"
    ]
   },
   {
@@ -56,7 +59,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Data Bundle\n",
     "We'll be using Zipline to handle our data. We've created a end of day data bundle for this project. Run the cell below to register this data bundle in zipline."
    ]
@@ -1587,7 +1589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   },
   "varInspector": {
    "cols": {
