--- a/quiz/m4_multifactor_models/m4l3/sector_neutral_solution.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/sector_neutral_solution.ipynb
@@ -547,9 +547,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_p4",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env_p4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -561,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
