--- a/quiz/m4_multifactor_models/m4l2/factor_model_portfolio_return.ipynb
+++ b/quiz/m4_multifactor_models/m4l2/factor_model_portfolio_return.ipynb
@@ -23,7 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cvxpy as cvx\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import time\n",
@@ -67,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','project_4_eod')\n",
+    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','module_4_quizzes_eod')\n",
     "ingest_func = bundles.csvdir.csvdir_equities(['daily'], quiz_helper.EOD_BUNDLE_NAME)\n",
     "bundles.register(quiz_helper.EOD_BUNDLE_NAME, ingest_func)\n",
     "print('Data Registered')"
