--- a/quiz/m4_multifactor_models/m4l3/overnight_returns.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/overnight_returns.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','project_4_eod')\n",
+    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','module_4_quizzes_eod')\n",
     "ingest_func = bundles.csvdir.csvdir_equities(['daily'], quiz_helper.EOD_BUNDLE_NAME)\n",
     "bundles.register(quiz_helper.EOD_BUNDLE_NAME, ingest_func)\n",
     "print('Data Registered')"
