--- a/quiz/m4_multifactor_models/m4l3/turnover_solution.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/turnover_solution.ipynb
@@ -43,7 +43,6 @@
     "import pandas as pd\n",
     "import time\n",
     "import os\n",
-    "#import quiz_tests\n",
     "import quiz_helper\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -83,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','project_4_eod')\n",
+    "os.environ['ZIPLINE_ROOT'] = os.path.join(os.getcwd(), '..', '..','data','module_4_quizzes_eod')\n",
     "ingest_func = bundles.csvdir.csvdir_equities(['daily'], quiz_helper.EOD_BUNDLE_NAME)\n",
     "bundles.register(quiz_helper.EOD_BUNDLE_NAME, ingest_func)\n",
     "print('Data Registered')"
