--- a/quiz/m4_multifactor_models/m4l3/clean_forward_returns.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/clean_forward_returns.ipynb
@@ -649,9 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Answer 4\n",
-    "\n",
-    "The 1D column represents the forward returns."
+    "## Answer 4 here:\n"
    ]
   },
   {
