--- a/quiz/m4_multifactor_models/m4l3/sector_neutral.ipynb
+++ b/quiz/m4_multifactor_models/m4l3/sector_neutral.ipynb
@@ -524,6 +524,21 @@
    "source": [
     "df2.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution\n",
+    "[Solution notebook](sector_neutral_solution.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
