Fix typos in project 1

--- a/project/project_1/project_1_starter.ipynb
+++ b/project/project_1/project_1_starter.ipynb
@@ -356,7 +356,7 @@
     "Here's a strategy that we will try:\n",
     "> For each month-end observation period, rank the stocks by _previous_ returns, from the highest to the lowest. Select the top performing stocks for the long portfolio, and the bottom performing stocks for the short portfolio.\n",
     "\n",
-    "Implement the `get_top_n` function to get the top performing stock for each month. Get the top performing stocks from `prev_returns` by assigning them a value of 1. For all other stocks, give them a value of 0. For example, using the following `prev_returns`:\n",
+    "Implement the `get_top_n` function to get the top performing stocks for each month. Get the top performing stocks from `prev_returns` by assigning them a value of 1. For all other stocks, give them a value of 0. For example, using the following `prev_returns`:\n",
     "\n",
     "```\n",
     "                                     Previous Returns\n",
@@ -374,7 +374,7 @@
     "2013-07-09     0         1         0         1         0         1         0\n",
     "...            ...       ...       ...       ...       ...       ...       ...\n",
     "```\n",
-    "*Note: You may have to use Panda's [`DataFrame.iterrows`](https://pandas.pydata.org/pandas-docs/version/0.21/generated/pandas.DataFrame.iterrows.html) with [`Series.nlargest`](https://pandas.pydata.org/pandas-docs/version/0.21/generated/pandas.Series.nlargest.html) in order to implement the function. This is one of those cases where creating a vecorization solution is too difficult.*"
+    "*Note: You may have to use Panda's [`DataFrame.iterrows`](https://pandas.pydata.org/pandas-docs/version/0.21/generated/pandas.DataFrame.iterrows.html) with [`Series.nlargest`](https://pandas.pydata.org/pandas-docs/version/0.21/generated/pandas.Series.nlargest.html) in order to implement the function. This is one of those cases where creating a vectorization solution is too difficult.*"
    ]
   },
   {
@@ -465,7 +465,7 @@
     "    lookahead_returns : DataFrame\n",
     "        Lookahead returns for each ticker and date\n",
     "    n_stocks: int\n",
-    "        The number number of stocks chosen for each month\n",
+    "        The number of stocks chosen for each month\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
