Fix pd.read_csv without index column

--- a/project/project_1/project_1_starter.ipynb
+++ b/project/project_1/project_1_starter.ipynb
@@ -67,9 +67,9 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../data/project_1/eod-quotemedia.csv', parse_dates=['date'], index_col=False)\n",
+    "df = pd.read_csv('../../data/project_1/eod-quotemedia.csv', parse_dates=['date'])\n",
     "\n",
-    "close = df.reset_index().pivot(index='date', columns='ticker', values='adj_close')\n",
+    "close = df.pivot(index='date', columns='ticker', values='adj_close')\n",
     "\n",
     "print('Loaded Data')"
    ]
