Fix wording about document frequency

--- a/quiz/m5_financial_statements/Bag_of_Word_Exercises.ipynb
+++ b/quiz/m5_financial_statements/Bag_of_Word_Exercises.ipynb
@@ -266,12 +266,12 @@
     "1. Gather a set of all the words in all the bag-of-words (python set comes in handy, and the union operator `|` is useful here)\n",
     "\n",
     "\n",
-    "2. Loop over each word $w$, and compute ${\\rm df}_w$, the number of times this word appears in each document in the corpus. A dictionary is useful for keeping track of ${\\rm df}_w$\n",
+    "2. Loop over each word $w$, and compute ${\\rm df}_w$, the number of documents where this word appears at least once. A dictionary is useful for keeping track of ${\\rm df}_w$\n",
     "\n",
     "\n",
     "3. After computing ${\\rm df}_w$, we can compute ${\\rm idf}(w)$. There are usually two possibilities, the simplest one is \n",
     "$${\\rm idf}(w)=\\frac{N}{{\\rm df}_w}$$\n",
-    "Where $N$ is the total number of document in the corpus and $f_w$ the number of times the word $w$ appears in each document. Frequently, a logarithm term is added as well\n",
+    "Where $N$ is the total number of documents in the corpus and $df_w$ the number of documents that contain the word $w$. Frequently, a logarithm term is added as well\n",
     "$${\\rm idf}(w)=\\log\\frac{N}{{\\rm df}_w}$$\n",
     "One issue with using the logarithm is that when ${\\rm df}_w = N$, ${\\rm idf}(w)=0$, indicating that words common to all documents would be ignored. If we don't want this behavior, we can define ${\\rm idf}(w)=\\log\\left(1+N/{\\rm df}_w\\right)$ or ${\\rm idf}(w)=1+\\log\\left(N/{\\rm df}_w\\right)$ instead. For us, we'll not use the extra +1 for ${\\rm idf}$.\n",
     "\n",
