Clarify how students can find the solution text in white font, and also gives link to solution file

--- a/quiz/m5_financial_statements/Bag_of_Word_Exercises.ipynb
+++ b/quiz/m5_financial_statements/Bag_of_Word_Exercises.ipynb
@@ -540,6 +540,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Solutions\n",
+    "\n",
+    "Drag your mouse over the white space below this cell, and you'll see details about the solutions.  Or, if it's easier, just double-click on the white space below this cell, which will reveal the cell with hidden text.  Also, please check out the file [bagofwords_solutions.py](bagofwords_solutions.py)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<font color=\"white\">\n",
     "Solution\n",
     "\n",
@@ -550,6 +559,13 @@
     "get_vectors_wrong: tf may not contain all the words in idf. We need zero padding for words that appear in idf but not in tf! \n",
     "</font> "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
