Made a note on non overlapping x
As it is currently written, non overlapping x will confuse on what return values it expects from students, project tests will check they return a Dataframe and a Series, the instructions ask to return a 2d ndarray and a 1d ndarray. Not sure which one is right and wrong though so just commented here.

--- a/project/project_7/project_7_starter.ipynb
+++ b/project/project_7/project_7_starter.ipynb
@@ -899,9 +899,9 @@
     "    \n",
     "    Returns\n",
     "    -------\n",
-    "    non_overlapping_x : 2 dimensional Ndarray\n",
-    "        The non overlapping input samples\n",
-    "    non_overlapping_y : 1 dimensional Ndarray\n",
+    "    non_overlapping_x : 2 dimensional Ndarray\n", "The project tests for this function check this function for returning a Dataframe, not ndarray"
+    "        The non overlapping input samples\n", 
+    "    non_overlapping_y : 1 dimensional Ndarray\n", "The project tests for this function check this function for returning a Series, not ndarray"
     "        The non overlapping target values\n",
     "    \"\"\"\n",
     "    assert len(x.shape) == 2\n",
