--- a/quiz/m7/m7l6/tree_shap_solution.ipynb
+++ b/quiz/m7/m7l6/tree_shap_solution.ipynb
@@ -902,8 +902,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S = set([0,1,2])\n",
-    "generate_all_subsets(S)"
+    "all_features = set([0,1,2])\n",
+    "generate_all_subsets(all_features)"
    ]
   },
   {
