--- a/project/project_2/project_2_starter.ipynb
+++ b/project/project_2/project_2_starter.ipynb
@@ -602,6 +602,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To answer this question think about the following:\n",
+    "- Are the histograms skewed? If yes, which side?\n",
+    "- Is the skewing because of outliers? What could be the reason for this?\n",
+    "- Which side do the outliers appear and what does it signify?\n",
+    "- What will happen to the distribution of the histograms if the outliers are removed?\n",
+    "\n",
+    "Another way to check if a distribution is normal is to create a QQ (quantile-quantile) plot. See [this link](https://towardsdatascience.com/q-q-plots-explained-5aa8495426c0) to learn more about QQ plots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*#TODO: Put Answer In this Cell*"
    ]
   },
@@ -662,9 +675,16 @@
    "source": [
     "This gives you the data to use in the KS-Test.\n",
     "\n",
-    "Now it's time to implement the function `calculate_kstest` to use Kolmogorov-Smirnov test (KS test) between a normal distribution and each stock's signal returns. Run KS test on a normal distribution against each stock's signal returns. Use [`scipy.stats.kstest`](https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.kstest.html#scipy-stats-kstest) perform the KS test. When calculating the standard deviation of the signal returns, make sure to set the delta degrees of freedom to 0.\n",
+    "Now it's time to implement the function `calculate_kstest` to use Kolmogorov-Smirnov test (KS test) between a distribution of stock returns (the input dataframe in this case) and each stock's signal returns. Run KS test on a normal distribution against each stock's signal returns. Use [`scipy.stats.kstest`](https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.kstest.html#scipy-stats-kstest) perform the KS test. When calculating the standard deviation of the signal returns, make sure to set the delta degrees of freedom to 0.\n",
     "\n",
     "For this function, we don't reccommend you try to find a vectorized solution. Instead, you should iterate over the [`groupby`](https://pandas.pydata.org/pandas-docs/version/0.21/generated/pandas.DataFrame.groupby.html) function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**Hint**: You should compare the signal return of the individual tickers against a normal distribution whose parameters - mean and standard deviation are computed from all tickers."
    ]
   },
   {
@@ -731,8 +751,9 @@
    "source": [
     "## Find Outliers\n",
     "With the ks and p values calculate, let's find which symbols are the outliers. Implement the `find_outliers` function to find the following outliers:\n",
-    "- Symbols that pass the null hypothesis with a p-value less than `pvalue_threshold`.\n",
-    "- Symbols that with a KS value above `ks_threshold`."
+    "- Symbols that pass the null hypothesis with a p-value less than `pvalue_threshold` **AND** with a KS value above `ks_threshold`.\n",
+    "\n",
+    "*Note: your function should return symbols that meet both requirements above.*"
    ]
   },
   {
@@ -840,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
